fix typo in ECR repo

--- a/.github/workflows/tc-skills-extraction-staging-build-deploy.yml
+++ b/.github/workflows/tc-skills-extraction-staging-build-deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: tc-skills
+  ECR_REPOSITORY: tc-skills-extraction
   DOCKERFILE: Dockerfile
 
 jobs:
